# qcs-api-client-rust

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.toml  README-INTERNAL-ONLY.md  README.md  clippy.toml  deny.layer.toml  docker-compose.yml  knope.toml
proxy-test/: Cargo.toml  Makefile.toml  README.md
proxy-test/tests/: test_proxy.rs
qcs-api-client-common/: .stubtest-allowlist  CHANGELOG-py.md  CHANGELOG.md  Cargo.toml  Makefile.toml  README-py.md  README.md  build.rs  clippy.toml  pyproject.toml
qcs-api-client-common-internal/: CHANGELOG.md  Cargo.toml
qcs-api-client-common-internal/src/configuration/: mod.rs  service.rs
qcs-api-client-common/docs/source/: conf.py  index.rst
qcs-api-client-common/python/: stubtest-allowlist
qcs-api-client-common/python/qcs_api_client_common/: __init__.py  __init__.pyi  configuration.pyi  grpc.py  httpx.py
qcs-api-client-common/qcs_api_client_common/: __init__.py  __init__.pyi  grpc.py  httpx.py
qcs-api-client-common/qcs_api_client_common/configuration/: __init__.py  __init__.pyi
qcs-api-client-common/scripts/: check-py-api.sh  lint-bindings.py  watchmedo_helper.sh
qcs-api-client-common/src/: backoff.rs  clap_utils.rs  errors.rs  grpc.rs  lib.rs  tracing_configuration.rs
qcs-api-client-common/src/configuration/: builder.rs  error.rs  mod.rs  oidc.rs  path.rs  pkce.rs  py.rs  secret_string.rs  secrets.rs  settings.rs  tokens.rs
qcs-api-client-common/src/otel_tracing/: mod.rs
qcs-api-client-common/src/py/: mod.rs
qcs-api-client-common/tests/: client_credentials_test.rs  token_refresh_test.rs
qcs-api-client-common/tests_py/: conftest.py  test_configuration.py  test_grpc.py  test_httpx.py
qcs-api-client-common/tests_py/__snapshots__/: test_configuration.ambr
qcs-api-client-common/tests_py/fixtures/: secrets.toml  settings.toml
qcs-api-client-grpc/: CHANGELOG.md  Cargo.toml  README.md  build.rs
qcs-api-client-grpc-internal/: CHANGELOG.md  Cargo.toml  build.rs
qcs-api-client-grpc-internal/proto/controller/: expression.proto  job.proto  job_metadata.proto  manifest.proto  readout.proto  service.proto  startup_configuration.proto  state.proto
qcs-api-client-grpc-internal/proto/translation/: metadata.proto  quil.proto  service.proto
qcs-api-client-grpc-internal/src/: lib.rs
qcs-api-client-grpc/proto/controller/: job.proto  job_metadata.proto  readout.proto  service.proto
qcs-api-client-grpc/proto/translation/: metadata.proto  service.proto
qcs-api-client-grpc/src/: channel.rs  lib.rs
qcs-api-client-grpc/src/channel/: grpc_web.rs  mod.rs
qcs-api-client-grpc/src/tonic/: channel.rs  common.rs  error.rs  grpc_web.rs  mod.rs  refresh.rs  retry.rs
qcs-api-client-grpc/src/tonic/trace/: mod.rs  shared.rs  trace_layer.rs  trace_layer_otel_ext.rs
qcs-api-client-grpc/tests/: compiles.rs
qcs-api-client-openapi/: .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  README.md  knope.toml  license_header  schema.yaml
qcs-api-client-openapi/.openapi-generator/: FILES
qcs-api-client-openapi/custom_templates/: lib.mustache  model.mustache  model_mod.mustache  oneof.mustache
qcs-api-client-openapi/custom_templates/reqwest/: api.mustache  api_mod.mustache  configuration.mustache
qcs-api-client-openapi/internal/: CHANGELOG.md  Cargo.toml  README.md  schema.yaml
qcs-api-client-openapi/internal/.openapi-generator/: FILES
qcs-api-client-openapi/internal/src/: lib.rs
qcs-api-client-openapi/internal/src/apis/: account_api.rs  authentication_api.rs  client_applications_api.rs  configuration.rs  default_api.rs  endpoints_api.rs  engagements_api.rs  internal_api.rs  legacy_api.rs  mod.rs  quantum_processors_api.rs  reservations_api.rs  translation_api.rs
qcs-api-client-openapi/internal/src/models/: a.rs  a_py_quil_compiler_isa.rs  account.rs  account_balance.rs  account_billing_customer_create_request.rs  account_billing_customer_update_request.rs  account_type.rs  accounts.rs  activate_user_request.rs  active_reset.rs  add_group_user_request.rs  address.rs  amplifier_settings.rs  announcement.rs  announcement_content.rs  announcements_response.rs  app__api__translation__models__parameter_spec.rs  arbitrary_readout_kernel.rs  arbitrary_waveform.rs  architecture.rs  architecture_1.rs  arguments_inner.rs  auth_email_password_reset_token_request.rs  auth_reset_password_request.rs  b.rs  (+245 more)
qcs-api-client-openapi/public/: CHANGELOG.md  Cargo.toml  README.md  schema.yaml
qcs-api-client-openapi/public/.openapi-generator/: FILES
qcs-api-client-openapi/public/src/: lib.rs
qcs-api-client-openapi/scripts/: insert_license_header.sh  patch_generated_code.sh  patch_schema.py  regenerate.sh  requirements.txt
qcs-api-client-openapi/src/: lib.rs
qcs-api-client-openapi/src/apis/: account_api.rs  authentication_api.rs  client_applications_api.rs  configuration.rs  default_api.rs  endpoints_api.rs  engagements_api.rs  mod.rs  quantum_processors_api.rs  reservations_api.rs  translation_api.rs
qcs-api-client-openapi/src/models/: account_balance.rs  account_type.rs  activate_user_request.rs  add_group_user_request.rs  announcement.rs  announcements_response.rs  architecture.rs  architecture_1.rs  auth_email_password_reset_token_request.rs  auth_reset_password_request.rs  auth_reset_password_with_token_request.rs  available_reservation.rs  billing_customer.rs  billing_invoice.rs  billing_invoice_all_of.rs  billing_invoice_line.rs  billing_invoice_status.rs  billing_price.rs  billing_price_recurrence.rs  billing_price_scheme.rs  billing_price_tier.rs  billing_price_tiers_mode.rs  billing_product.rs  billing_upcoming_invoice.rs  characteristic.rs  check_client_application_request.rs  check_client_application_response.rs  checksum_description.rs  client_application.rs  client_applications_download_link.rs  code.rs  create_endpoint_parameters.rs  create_engagement_request.rs  create_engagement_x_qcs_account_type_parameter.rs  create_reservation_request.rs  edge.rs  endpoint.rs  endpoint_addresses.rs  engagement_credentials.rs  engagement_with_credentials.rs  (+46 more)
(+387 files in other folders)
