# WARNING: ./scripts/commit-public-repo-update.sh overwrites this file before
# pushing commits to the public github repo. `workspace.dependencies` should
# be manually curated there to reflect the dependencies for the _public_ crates
# only.
[workspace]
resolver = "2"
members = [
    "proxy-test",
    "qcs-api-client-common",
    "qcs-api-client-grpc",
    "qcs-api-client-grpc-internal",
    "qcs-api-client-openapi/internal",
    "qcs-api-client-openapi/public",
]

[workspace.dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
backoff = { version = "0.4.0", features = ["tokio"] }
futures-util = "0.3.30"
http = "1.1"
http-body = "1"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-proxy2 = { version = "0.1.0", default-features = false, features = ["rustls"] }
hyper-socks2 = { version = "0.9.1", default-features = false }
hyper-util = { version = "0.1.6", features = ["client-legacy"] }
# jsonwebtoken should always be validated after upgrading. Changes to the validation logic can cause the client to
# believe JWTs are always invalid, which causes the client to refresh them before every request. See #83.
jsonwebtoken = "9.3.0"
opentelemetry = "0.24.0"
once_cell = "1.17.0"
opentelemetry-http = "0.13.0"
opentelemetry_sdk = "0.24.0"
pbjson = "0.7.0"
pbjson-build = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.1"
prost-build = "0.13.3"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls-native-roots"] }
reqwest-middleware = { version = "0.3.2", features = ["json"] }
reqwest-tracing = { version = "0.5.2", features = ["opentelemetry_0_23", "tracing-opentelemetry_0_24_pkg"] }
rstest = "0.17.0"
# Before updating `serde`, check for the following:
#
# 1. Has support been added for retaining the tag field for internally tagged enums?
# 2. Has support been added for deserializing into a default enum variant if the tag
#    does not match other variants or is not present?
#
# If 1 *and* 2 are true, then `qcs-api-client-openapi/internal/src/models/channels/manual_serde.rs` can be
# removed, along with the relevant parts of `qcs-api-client-openapi/internal/scripts/patch_generated_code.sh`,
# and the derived versions of the traits can be used along with the above features.
#
# Otherwise, make sure that `manual_serde.rs` still compiles with the newer version,
# as it uses `serde` modules not covered by semver.
serde = "1.0.140"
serde_json = "1.0.91"
tempfile = "3.3.0"
thiserror = "1.0.32"
tokio = { version = "1.38.0", features = ["time"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = { version = "0.12.3", features = ["tls-roots", "tls-native-roots"] }
tonic-build = "0.12.3"
tonic-health = "0.12.3"
tonic-web = "0.12.3"
tower = { version = "0.4", features = ["retry"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.37" }
tracing-opentelemetry = "0.25.0"
tracing-subscriber = "0.3.18"
url = { version = "2.3.1" }
urlpattern = "0.2.0"
uuid = { version = "1.10.0", features = ["v4"] }

