[workspace]
  members = ['qcs-api-client-common', 'qcs-api-client-grpc', 'qcs-api-client-openapi']
  resolver = '2'

  [workspace.dependencies]
    futures-util = '0.3.30'
    http = '1.1'
    http-body = '1'
    http-body-util = '0.1.2'
    hyper = '1.4.1'
    jsonwebtoken = '9.3.0'
    once_cell = '1.17.0'
    opentelemetry = '0.27.1'
    opentelemetry-http = '0.27.0'
    opentelemetry_sdk = '0.27.1'
    pbjson = '0.7.0'
    pbjson-build = '0.7.0'
    pbjson-types = '0.7.0'
    prost = '0.13.1'
    prost-build = '0.13.3'
    rstest = '0.17.0'
    serde = '1.0.140'
    serde_json = '1.0.91'
    tempfile = '3.3.0'
    thiserror = '1.0.32'
    tonic-build = '0.12.3'
    tonic-health = '0.12.3'
    tonic-web = '0.12.3'
    tracing = '0.1.41'
    tracing-opentelemetry = '0.28.0'
    tracing-subscriber = '0.3.18'
    urlpattern = '0.2.0'

    [workspace.dependencies.async-std]
      features = ['attributes']
      version = '1.12.0'

    [workspace.dependencies.backoff]
      features = ['tokio']
      version = '0.4.0'

    [workspace.dependencies.hyper-proxy2]
      default-features = false
      features = ['rustls']
      version = '0.1.0'

    [workspace.dependencies.hyper-socks2]
      default-features = false
      version = '0.9.1'

    [workspace.dependencies.hyper-util]
      features = ['client-legacy']
      version = '0.1.6'

    [workspace.dependencies.reqwest]
      default-features = false
      features = ['json', 'rustls-tls-native-roots']
      version = '0.12.5'

    [workspace.dependencies.reqwest-middleware]
      features = ['json']
      version = '0.3.2'

    [workspace.dependencies.reqwest-tracing]
      features = ['opentelemetry_0_27', 'tracing-opentelemetry_0_28_pkg']
      version = '0.5.5'

    [workspace.dependencies.tokio]
      features = ['time']
      version = '1.38.0'

    [workspace.dependencies.tokio-stream]
      features = ['net']
      version = '0.1.15'

    [workspace.dependencies.tonic]
      features = ['tls-roots', 'tls-native-roots']
      version = '0.12.3'

    [workspace.dependencies.tower]
      features = ['retry']
      version = '0.4'

    [workspace.dependencies.tower-http]
      features = ['trace']
      version = '0.5.2'

    [workspace.dependencies.url]
      version = '2.3.1'

    [workspace.dependencies.uuid]
      features = ['v4']
      version = '1.10.0'
