[workspace]
  members = ['qcs-api-client-common', 'qcs-api-client-grpc', 'qcs-api-client-openapi']
  resolver = '2'

  [workspace.dependencies]
    anyhow = '1.0.68'
    async-trait = '0.1'
    cargo_metadata = '0.23.1'
    chrono = '0.4'
    clap-stdin = '0.8'
    clap_complete = '4'
    colored_json = '5'
    derive_builder = '0.20.0'
    dialoguer = '0.12.0'
    eyre = '0.6.8'
    futures = '0.3.26'
    futures-util = '0.3.30'
    heck = '0.5'
    home = '0.5.5'
    http = '1.1'
    http-body = '1'
    http-body-util = '0.1.2'
    httparse = '1.10'
    httpmock = '0.8.0-alpha.1'
    hyper = '1.4.1'
    itertools = '0.12'
    jiff = '0.2'
    jsonwebtoken = '9.3.0'
    miette = '7'
    oauth2 = '5.0'
    oauth2-test-server = '=0.1.3'
    once_cell = '1.17.0'
    openapiv3 = '2.0'
    opentelemetry = '0.31.0'
    opentelemetry-http = '0.31.0'
    opentelemetry_sdk = '0.31.0'
    paste = '1.0.15'
    pbjson = '0.9.0'
    pbjson-build = '0.9.0'
    pbjson-types = '0.9.0'
    prettyplease = '0.2'
    prost = '0.14.1'
    prost-build = '0.14.1'
    prost-types = '0.14.1'
    pyo3-build-config = '0.22.1'
    rigetti-pyo3 = '0.3.6'
    rstest = '0.26.0'
    rustls = '0.23'
    serde = '1.0.228'
    serde_json = '1.0.91'
    serde_path_to_error = '0.1.20'
    serde_yaml = '0.9'
    serial_test = '3.1.1'
    syn = '2.0'
    tabled = '0.20'
    tempfile = '3.3.0'
    thiserror = '2.0'
    toml_edit = '0.23.7'
    tonic-build = '0.14.2'
    tonic-health = '0.14.2'
    tonic-prost = '0.14.2'
    tonic-prost-build = '0.14.2'
    tonic-web = '0.14.2'
    tracing = '0.1.41'
    tracing-opentelemetry = '0.32.0'
    tracing-subscriber = '0.3.18'
    urlpattern = '0.4.0'
    walkdir = '2.5'
    webbrowser = '0.8.15'

    [workspace.dependencies.async-std]
      features = ['attributes']
      version = '1.12.0'

    [workspace.dependencies.async-tempfile]
      features = ['uuid']
      version = '0.7.0'

    [workspace.dependencies.backoff]
      features = ['tokio']
      version = '0.4.0'

    [workspace.dependencies.clap]
      features = ['derive']
      version = '4.5'

    [workspace.dependencies.figment]
      features = ['env', 'toml']
      version = '0.10.18'

    [workspace.dependencies.hyper-proxy2]
      default-features = false
      features = ['rustls']
      version = '0.1.0'

    [workspace.dependencies.hyper-socks2]
      default-features = false
      version = '0.9.1'

    [workspace.dependencies.hyper-util]
      features = ['client-legacy']
      version = '0.1.6'

    [workspace.dependencies.pyo3]
      features = ['multiple-pymethods']
      version = '0.20.3'

    [workspace.dependencies.pyo3-asyncio]
      features = ['tokio-runtime']
      version = '0.20.0'

    [workspace.dependencies.qcs-api-client-common]
      path = 'qcs-api-client-common'
      version = '0.14.0-dev-180.0'

    [workspace.dependencies.qcs-api-client-grpc]
      path = 'qcs-api-client-grpc'
      version = '0.14.0-dev-180.0'

    [workspace.dependencies.qcs-api-client-grpc-internal]
      path = 'qcs-api-client-grpc-internal'
      registry = 'rigetti-cargo'
      version = '0.14.1'

    [workspace.dependencies.qcs-api-client-openapi]
      path = 'qcs-api-client-openapi/public'
      version = '0.14.1'

    [workspace.dependencies.qcs-api-client-openapi-internal]
      path = 'qcs-api-client-openapi/internal'
      registry = 'rigetti-cargo'
      version = '0.14.1'

    [workspace.dependencies.reqwest]
      default-features = false
      features = ['json', 'rustls-tls-native-roots']
      version = '0.12.5'

    [workspace.dependencies.reqwest-middleware]
      features = ['json']
      version = '>0.3.0,<0.5'

    [workspace.dependencies.reqwest-tracing]
      features = ['opentelemetry_0_30']
      version = '0.5.8'

    [workspace.dependencies.shellexpand]
      default-features = false
      features = ['base-0']
      version = '3.1.0'

    [workspace.dependencies.time]
      features = ['macros', 'parsing', 'serde']
      version = '0.3.34'

    [workspace.dependencies.tokio]
      features = ['time']
      version = '1.38.0'

    [workspace.dependencies.tokio-stream]
      features = ['net']
      version = '0.1.15'

    [workspace.dependencies.tokio-util]
      features = ['net']
      version = '0.7'

    [workspace.dependencies.toml]
      features = ['preserve_order']
      version = '0.9.8'

    [workspace.dependencies.tonic]
      features = ['tls-native-roots']
      version = '0.14.2'

    [workspace.dependencies.tower]
      features = ['retry', 'util']
      version = '0.5'

    [workspace.dependencies.tower-http]
      features = ['trace']
      version = '0.5.2'

    [workspace.dependencies.url]
      version = '2.3.1'

    [workspace.dependencies.uuid]
      features = ['v4']
      version = '1.10.0'
