[package]
name = "qcs-api-client-common-internal"
version = "0.7.3"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rigetti/qcs-api-client-rust"
homepage = "https://github.com/rigetti/qcs-api-client-rust"
categories = ["api-bindings", "authentication"]
keywords = ["qcs", "quantum", "rigetti", "api"]
description = "Common code for QCS API clients"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = "0.3.26"
http = { version = "0.2.8" }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls-native-roots", "socks"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["fs"] }
toml = "0.7.3"
tracing = { version = "0.1.37", optional = true }
url = { version = "2.3.1", optional = true }
urlpattern = { version = "0.2.0", optional = true }
qcs-api-client-common = { path = "../qcs-api-client-common" }
oauth2 = { version = "4.1.0", default-features = false, features = ["reqwest"] }
log = "0.4.14"
chrono = "0.4"
home = "0.5.5"

[dev-dependencies]
rstest = "0.17.0"
tempfile = "3.3.0"
tokio = { version = "1.20.1", features = ["fs", "macros"] }

[features]
tracing = ["dep:tracing", "qcs-api-client-common/tracing", "url", "urlpattern"]
tracing-config = ["tracing", "qcs-api-client-common/tracing-config"]
