[package]
name = "qcs-api-client-common-internal"
version = "0.9.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rigetti/qcs-api-client-rust"
homepage = "https://github.com/rigetti/qcs-api-client-rust"
categories = ["api-bindings", "authentication"]
keywords = ["qcs", "quantum", "rigetti", "api"]
description = "Common code for QCS API clients"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"

futures = "0.3.26"
home = "0.5.5"
http = { workspace = true }
jsonwebtoken = { workspace = true }
log = "0.4.14"
oauth2 = { version = "4.1.0", default-features = false, features = ["reqwest"] }
qcs-api-client-common = { path = "../qcs-api-client-common" }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls-native-roots", "socks"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true } 
tokio = { workspace = true, features = ["fs"] }
toml = "0.7.3"
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
urlpattern = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true } 
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros"] }

[features]
tracing = [
  "dep:tracing",
  "qcs-api-client-common/tracing",
  "url", 
  "urlpattern"
]
tracing-config = [
  "tracing",
  "qcs-api-client-common/tracing-config",
]
