[build-dependencies]
  [build-dependencies.pyo3-build-config]
    optional = true
    version = '0.22.1'

[dependencies]
  async-trait = '0.1'
  derive_builder = '0.20.0'
  futures = '0.3.26'
  home = '0.5.5'
  shellexpand = '3.1.0'
  toml_edit = '0.22.22'

  [dependencies.async-tempfile]
    features = ['uuid']
    version = '0.6.0'

  [dependencies.backoff]
    workspace = true

  [dependencies.figment]
    features = ['env', 'toml']
    version = '0.10.18'

  [dependencies.http]
    workspace = true

  [dependencies.jsonwebtoken]
    workspace = true

  [dependencies.paste]
    optional = true
    version = '1.0.15'

  [dependencies.pyo3]
    features = ['multiple-pymethods']
    optional = true
    version = '0.20.3'

  [dependencies.pyo3-asyncio]
    features = ['tokio-runtime']
    optional = true
    version = '0.20.0'

  [dependencies.reqwest]
    default-features = false
    features = ['socks']
    workspace = true

  [dependencies.rigetti-pyo3]
    optional = true
    version = '0.3.6'

  [dependencies.serde]
    features = ['derive']
    workspace = true

  [dependencies.thiserror]
    workspace = true

  [dependencies.time]
    features = ['macros', 'parsing', 'serde']
    version = '0.3.34'

  [dependencies.tokio]
    features = ['rt-multi-thread', 'sync', 'fs']
    workspace = true

  [dependencies.toml]
    features = ['preserve_order']
    version = '0.8.19'

  [dependencies.tracing]
    optional = true
    workspace = true

  [dependencies.url]
    optional = true
    workspace = true

  [dependencies.urlpattern]
    optional = true
    workspace = true

[dev-dependencies]
  httpmock = '0.8.0-alpha.1'
  serial_test = '3.1.1'

  [dev-dependencies.figment]
    features = ['env', 'toml', 'test']
    version = '0.10.18'

  [dev-dependencies.rstest]
    workspace = true

  [dev-dependencies.tokio]
    features = ['fs', 'macros']
    workspace = true

[features]
  python = ['dep:pyo3', 'dep:pyo3-asyncio', 'dep:paste', 'dep:rigetti-pyo3', 'tokio/macros', 'pyo3-build-config']
  tracing = ['dep:tracing', 'url', 'urlpattern']
  tracing-config = ['tracing']

[lib]
  crate-type = ['cdylib', 'rlib']
  name = 'qcs_api_client_common'

[lints]
  [lints.clippy]
    all = 'deny'
    module_name_repetitions = 'allow'
    redundant_pub_crate = 'allow'
    unsafe_derive_deserialize = 'allow'

    [lints.clippy.nursery]
      level = 'warn'
      priority = -2

    [lints.clippy.pedantic]
      level = 'warn'
      priority = -1

  [lints.rust]
    absolute_paths_not_starting_with_crate = 'warn'
    anonymous_parameters = 'warn'
    bad_style = 'warn'
    dead_code = 'warn'
    improper_ctypes = 'warn'
    keyword_idents = 'warn'
    macro_use_extern_crate = 'warn'
    meta_variable_misuse = 'warn'
    missing_abi = 'warn'
    missing_debug_implementations = 'warn'
    missing_docs = 'warn'
    no_mangle_generic_items = 'warn'
    non_shorthand_field_patterns = 'warn'
    noop_method_call = 'warn'
    overflowing_literals = 'warn'
    path_statements = 'warn'
    patterns_in_fns_without_body = 'warn'
    semicolon_in_expressions_from_macros = 'warn'
    trivial_casts = 'warn'
    trivial_numeric_casts = 'warn'
    unconditional_recursion = 'warn'
    unreachable_pub = 'warn'
    unsafe_code = 'warn'
    unused = 'warn'
    unused_allocation = 'warn'
    unused_comparisons = 'warn'
    unused_extern_crates = 'warn'
    unused_import_braces = 'warn'
    unused_lifetimes = 'warn'
    unused_parens = 'warn'
    unused_qualifications = 'warn'
    while_true = 'warn'

[package]
  categories = ['api-bindings', 'authentication']
  description = 'Common code for QCS API clients'
  edition = '2021'
  homepage = 'https://github.com/rigetti/qcs-api-client-rust'
  keywords = ['qcs', 'quantum', 'rigetti', 'api']
  license = 'Apache-2.0'
  name = 'qcs-api-client-common'
  publish = true
  readme = 'README.md'
  repository = 'https://github.com/rigetti/qcs-api-client-rust'
  version = '0.12.6-dev.3'

  [package.metadata]
    [package.metadata.docs]
      [package.metadata.docs.rs]
        features = ['python', 'tracing']
