[package]
name = "qcs-api-client-grpc-internal"
version = "0.6.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcs-api-client-common = { path = "../qcs-api-client-common", version = "0.6.0" }
http-body = "0.4.5"
hyper = "0.14.23"
hyper-proxy = "0.9.1"
hyper-socks2 = { version = "0.7.0", default-features = false }
pbjson = "0.4.0"
prost = "0.11.0"
serde = "1.0"
tonic = "0.8.0"
pbjson-types = "0.4.0"
tower = "0.4"
thiserror = "1.0.32"
tracing = { version = "0.1.37", optional = true }
opentelemetry = { version = "0.18.0", optional = true }
opentelemetry_api = { version = "0.18.0", optional = true }
opentelemetry-http = { version = "0.7.0", optional = true }
urlpattern = { version = "0.2.0", optional = true }
url = { version = "2.3.1" }
http = "0.2.8"

[build-dependencies]
tonic-build = "0.8.0"
pbjson-build = "0.4.0"
prost-build = "0.11.1"

[features]
default = ["tls"]
tls = ["tonic/tls", "tonic/tls-roots"]
otel-tracing = [
    "opentelemetry",
    "opentelemetry_api",
    "opentelemetry-http",
    "qcs-api-client-common/otel-tracing",
    "tracing",
    "urlpattern",
]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures-util = "0.3.25"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry_sdk = "0.18.0"
rstest = "0.16.0"
serde_json = "1.0.91"
tempfile = "3.3.0"
tokio = { version = "1.24.1", features = ["parking_lot"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic-health = "0.8.0"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
